// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Item renders Single Line Item 1`] = `
<div
  className="flex justify-around items-center w-full min-w-min flex-wrap"
>
  <div
    className="m-0.5 min-w-full sm:min-w-min"
  >
    <div
      className="sc-EmgEd dyfAOJ"
    >
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Single line item
      </div>
    </div>
  </div>
  <div
    className="m-0.5 min-w-full sm:min-w-min"
  >
    <div
      className="sc-EmgEd ezEjVq"
    >
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Single line item
      </div>
    </div>
  </div>
</div>
`;

exports[`List Item renders Single Line Item with Icon 1`] = `
<div
  className="flex justify-around items-center w-full flex-wrap"
>
  <div
    className="m-0.5 min-w-full sm:min-w-min"
  >
    <div
      className="sc-EmgEd ezEjVq"
    >
      <span
        className="sc-jNxMLV kHTmCq"
      >
        <svg
          className="sc-dvwKko"
          fill="none"
          fontSize="1.4375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
            stroke="currentColor"
          />
        </svg>
      </span>
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Single line item
      </div>
    </div>
  </div>
  <div
    className="m-0.5 min-w-full sm:min-w-min"
  >
    <div
      className="sc-EmgEd ezEjVq"
    >
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Single line item
      </div>
      <span
        className="sc-ctuRtO eNdrfL"
      >
        <svg
          className="sc-dvwKko"
          fill="none"
          fontSize="1.4375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
            stroke="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="m-0.5 min-w-full sm:min-w-min"
  >
    <div
      className="sc-EmgEd ezEjVq"
    >
      <span
        className="sc-jNxMLV kHTmCq"
      >
        <svg
          className="sc-dvwKko"
          fill="none"
          fontSize="1.4375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
            stroke="currentColor"
          />
        </svg>
      </span>
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Single line item
      </div>
      <span
        className="sc-ctuRtO eNdrfL"
      >
        <svg
          className="sc-dvwKko"
          fill="none"
          fontSize="1.4375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
            stroke="currentColor"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="m-0.5 min-w-full sm:min-w-min"
  >
    <div
      className="sc-EmgEd fQNIVl"
    >
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Single line item
      </div>
      <span
        className="sc-ibkoSk beNUiD"
      >
        Meta
      </span>
    </div>
  </div>
</div>
`;

exports[`List Item renders Single Line Item with differen Sizes 1`] = `
<div
  className="flex justify-around items-center w-full min-w-min flex-wrap"
>
  <div
    className="m-0.5 min-w-full sm:min-w-min"
  >
    <div
      className="sc-EmgEd ezEjVq"
    >
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Large
      </div>
    </div>
  </div>
  <div
    className="m-0.5 min-w-full sm:min-w-min"
  >
    <div
      className="sc-EmgEd eylSww"
      size="medium"
    >
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Medium
      </div>
    </div>
  </div>
</div>
`;

exports[`List Item renders Two Line Items 1`] = `
<div
  className="flex justify-around items-center w-full min-w-min flex-wrap"
>
  <div
    className="min-w-full sm:min-w-min mb-2"
  >
    <div
      className="sc-EmgEd dyfAOJ"
    >
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Two lines item
      </div>
      <div
        className="sc-laFCIP fnxBoc"
      >
        <div
          className="sc-keiIcO kcbkaV"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry
        </div>
      </div>
    </div>
  </div>
  <div
    className="sm:w-96"
  >
    <div
      className="sc-EmgEd ezEjVq"
    >
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Two lines item
      </div>
      <div
        className="sc-laFCIP fnxBoc"
      >
        <div
          className="sc-keiIcO kcbkaV"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List Item renders Two Line Items with Checkbox 1`] = `
<div
  className="flex justify-around items-center w-full flex-wrap"
>
  <div
    className="w-72 m-0.5"
  >
    <div
      className="sc-EmgEd dyfAOJ"
    >
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Two lines item
      </div>
      <span
        className="sc-ctuRtO eNdrfL"
      >
        <label
          className="sc-eZkcaX iVvJBb"
        >
          <input
            className="sc-hQikvm eJmwLN"
            onClick={[Function]}
            type="checkbox"
          />
          <div
            className="sc-hZiMVj fzhDfN"
          >
            <span
              className="sc-dDaJoQ kZibGa"
            >
              <div
                checked={false}
                className="sc-McAUB bUcIWF"
              />
            </span>
          </div>
        </label>
      </span>
      <div
        className="sc-laFCIP fnxBoc"
      >
        <div
          className="sc-keiIcO kcbkaV"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List Item renders Two Line Items with Icon 1`] = `
<div
  className="flex justify-around items-center w-full flex-wrap"
>
  <div
    className="w-72 m-0.5"
  >
    <div
      className="sc-EmgEd ezEjVq"
    >
      <span
        className="sc-jNxMLV kHTmCq"
      >
        <svg
          className="sc-dvwKko"
          fill="none"
          fontSize="1.4375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
            stroke="currentColor"
          />
        </svg>
      </span>
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Two lines item
      </div>
      <div
        className="sc-laFCIP fnxBoc"
      >
        <div
          className="sc-keiIcO kcbkaV"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry
        </div>
      </div>
    </div>
  </div>
  <div
    className="w-72 m-0.5"
  >
    <div
      className="sc-EmgEd ezEjVq"
    >
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Two lines item
      </div>
      <span
        className="sc-ctuRtO eNdrfL"
      >
        <svg
          className="sc-dvwKko"
          fill="none"
          fontSize="1.4375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
            stroke="currentColor"
          />
        </svg>
      </span>
      <div
        className="sc-laFCIP fnxBoc"
      >
        <div
          className="sc-keiIcO kcbkaV"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry
        </div>
      </div>
    </div>
  </div>
  <div
    className="w-72 m-0.5"
  >
    <div
      className="sc-EmgEd ezEjVq"
    >
      <span
        className="sc-jNxMLV kHTmCq"
      >
        <svg
          className="sc-dvwKko"
          fill="none"
          fontSize="1.4375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
            stroke="currentColor"
          />
        </svg>
      </span>
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Two lines item
      </div>
      <span
        className="sc-ctuRtO eNdrfL"
      >
        <svg
          className="sc-dvwKko"
          fill="none"
          fontSize="1.4375rem"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
            stroke="currentColor"
          />
        </svg>
      </span>
      <div
        className="sc-laFCIP fnxBoc"
      >
        <div
          className="sc-keiIcO kcbkaV"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry
        </div>
      </div>
    </div>
  </div>
  <div
    className="w-72 m-0.5"
  >
    <div
      className="sc-EmgEd fQNIVl"
    >
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Two lines item
      </div>
      <span
        className="sc-ibkoSk beNUiD"
      >
        Meta
      </span>
      <div
        className="sc-laFCIP fnxBoc"
      >
        <div
          className="sc-keiIcO kcbkaV"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`List Item renders Two Line Items with different Sizes 1`] = `
<div
  className="flex justify-around items-center w-full flex-wrap"
>
  <div
    className="m-0.5"
  >
    <div
      className="sc-EmgEd ezEjVq"
    >
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Large
      </div>
      <div
        className="sc-laFCIP fnxBoc"
      >
        <div
          className="sc-keiIcO kcbkaV"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-0.5"
  >
    <div
      className="sc-EmgEd eylSww"
      size="medium"
    >
      <div
        className="sc-iRaSfU cfGOUX"
      >
        Medium
      </div>
      <div
        className="sc-laFCIP fnxBoc"
      >
        <div
          className="sc-keiIcO kcbkaV"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry
        </div>
      </div>
    </div>
  </div>
</div>
`;
